# ComfyUI-AV-LatentSync

./: .gitignore  README.md  nodes.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish_action.yml
configs/scheduler/: config.json
latentsync/utils/: face_detector.py
scripts/: inference.py
workflow/: latentsync1.5_comfyui_basic.json
